# yt-channel

./: .gitignore  AGENTS.md  README.md  benchmark_channels.yaml  config.whisprs.yaml  config.yaml  corpus_batch.yaml  corpus_batch2.yaml  corpus_batch3.yaml  corpus_queue.yaml  corpus_queue_micro.yaml  corpus_queue_phase1.yaml  corpus_queue_phase2.yaml  main.py  pyproject.toml  requirements-cookies.txt  requirements.txt  research_freeze.yaml  run_whisprs_analysis.bat  setup.bat
assembler/: __init__.py  __main__.py  assemble.py  brand_profile_assembler.py  confidence_engine.py  helpers.py  outcome_profile_assembler.py  recommendations_assembler.py  report_renderer.py  slug.py
brands/: README.md  registry.yaml
channel_analyzer/: __init__.py  advanced_visual_analyzer.py  audio_analysis.py  benchmark_program.py  bible_synthesizer.py  bonus.py  comment_intelligence.py  competitor_acquisition_engine.py  config.py  cross_channel_synthesizer.py  discovery.py  downloader.py  emotion_analysis.py  music_analysis.py  narrative_analysis.py  performance.py  pipeline.py  quote_analysis.py  report.py  research_dashboard.py  review_artifact.py  utils.py  visual_analysis.py
content_intelligence_core/: README.md
cookies/: README.md
docs/: 00_INDEX.md  01_Vision.md  02_PRD.md  03_Architecture.md  04_Roadmap.md  05_AgentCatalog.md  06_DataModel.md  07_EmotionalTaxonomy.md  08_VisualTaxonomy.md  09_MotionBible.md  10_STYLE_BIBLE.md  ARCHITECTURE_VISION.md  AUTONOMY_RUNBOOK.md  BRAND_DNA_SPEC.md  CORPUS_ORACLE_RUNBOOK.md  CREATOR_FEEDBACK_TEMPLATE.md  CURRENT_STATE.md  MIGRATION_PLAN.md  (+10 more)
(+113 files in other folders)
