[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "channel-intelligence-analyzer"
version = "1.0.0"
description = "Reverse-engineer YouTube channels from Shorts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.12.0",
    "openai-whisper>=20231117",
    "librosa>=0.10.2",
    "moviepy>=1.0.3",
    "opencv-python>=4.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "sentence-transformers>=2.3.0",
    "youtube-search-python>=1.6.6",
    "tqdm>=4.66.0",
    "Pillow>=10.2.0",
    "scipy>=1.12.0",
    "imageio>=2.33.0",
    "imageio-ffmpeg>=0.4.9",
    "PyYAML>=6.0.1",
]

[project.scripts]
channel-analyzer = "main:main"

[tool.setuptools.packages.find]
include = ["channel_analyzer*"]
